[tool.poetry]
name = "mortgage-repayment-calculator"
version = "0.0.0"
description = ""
authors = ["Chris Mamon <chrisam1993@gmail.com>"]
readme = "README.md"
packages = [{include = "mortgage_repayment_calculator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
plotly = "^5.15.0"
numpy = "^1.25.1"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]
